Fix horizontal scrollbar showing in verysmall layout podcast description

--- a/public/app/style.scss
+++ b/public/app/style.scss
@@ -1509,7 +1509,7 @@ button.material {
     }
 
     .player_bottom {
-      overflow-x: hidden;
+      overflow-x: hidden !important;
       overflow-y: auto !important;
     }
 
